# Neona

./: .gitignore  README.md  go.mod  go.sum
.ai/knowledge/: neona_overview.md
.github/: FUNDING.yml
.github/workflows/: build.yml  pushover-notify.yml
.plan/: 07-tui-architecture.md
cmd/neona/: api_client.go  auth.go  daemon.go  main.go  mcp_cmd.go  memory.go  memory_fallback.go  proc_unix.go  proc_windows.go  task.go  tui_cmd.go  update_cmd.go
cmd/neona/c/memory/: map.c  prepare.c
docs/: REPO_CHARTER.md
internal/agents/: detector.go
internal/audit/: pdr.go
internal/auth/: auth.go
internal/connectors/: connector.go
internal/connectors/localexec/: localexec.go  localexec_test.go
internal/controlplane/: errors.go  server.go  server_test.go  service.go
internal/mcp/: config.go  registry.go  router.go  router_test.go  types.go
internal/models/: models.go
internal/scheduler/: config.go  parallel_test.go  scheduler.go  scheduler_test.go
internal/store/: store.go  store_test.go
internal/tui/: app.go  client.go  cmdbar.go  suggestions.go  taskdetail.go  tasklist.go  types.go
internal/update/: update.go
neona-tui/: README.md  pyproject.toml
neona-tui/neona_tui/: __init__.py  api_client.py  app.py
scripts/: install.sh
